--- a/aula03/styleFlagsOtimizado.css
+++ b/aula03/styleFlagsOtimizado.css
@@ -15,7 +15,7 @@ body {
 #flags {
     width: 100vw;
     height: 300px;
-    background: rgb(255, 106, 7);
+    background: rgb(219, 99, 19);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -23,7 +23,7 @@ body {
 }
 
 .bg-color-white {
-    background-color: rgb(255, 255, 255, 0.911);
+    background-color: rgba(255, 255, 255, 0.911);
 }
 
 .bg-color-red {
